--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <mat-card class="machineContent">
     <mat-form-field>
+        <input matInput type = "number" class="paymantBtn"  placeholder="Insert paymant ampunt" [(ngModel)]="paymantAmount" min="0.1">
+    </mat-form-field> 
+    <mat-form-field>
         <input matInput type = "number" class="addBtn"  placeholder="Insert value of 5" [(ngModel)]="sixthCoinInStock">
     </mat-form-field>  
     <mat-form-field> 
