--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .machineContent{
-    margin: 10% auto auto auto;
+    margin: auto;
     width: 50%;
     background-color: rgb(215, 228, 230);
     padding: 8%;
