--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
     <mat-form-field class="addBtn"> 
         <input matInput type = "number" class="addBtn"  placeholder="Broj kovanica od 0.1 na stanju" [(ngModel)]="firstCoinInStock">
     </mat-form-field> 
-    <button mat-raised-button  color="primary" class="contentBtn" id = "disabledBtn" (click)="showCoins()">DODATI U AUTOMAT STANJE</button>
+    <button mat-raised-button  color="primary" class="contentBtn" id = "disabledAddBtn" (click)="showCoins()">DODATI U AUTOMAT STANJE</button>
     <p>IZNOS ZA UPLATU: {{paymantAmount}}</p>
     <p>UNESENA VRIJEDNOST: {{insertCoin | number: '0.1' }}</p>
     <mat-form-field class="addBtn">
