--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,14 +29,14 @@
     <mat-form-field class="addBtn"> 
         <input matInput type = "number" class="addBtn"  placeholder="Broj kovanica od 0.1 na stanju" [(ngModel)]="firstCoinInStock">
     </mat-form-field> 
-    <button mat-raised-button  color="primary" class="contentBtn" id = "disabledAddBtn" (click)="showCoins()">DODATI U AUTOMAT STANJE</button>
+    <button mat-raised-button  color="primary" class="contentBtn" (click)="showCoins()">DODATI U AUTOMAT STANJE</button>
     <p>IZNOS ZA UPLATU: {{paymantAmount}}</p>
     <p>UNESENA VRIJEDNOST: {{insertCoin | number: '0.1' }}</p>
     <mat-form-field class="addBtn">
         <input matInput type = "number" class="contentBtn"  placeholder="UNESITE KOVANICU" [(ngModel)]="inputValue">
     </mat-form-field>
   
-    <button mat-raised-button  color="primary" class="contentBtn" id = "disabledBtn" (click)="onItemSelector()">DODAJTE KOVANICU</button>
+    <button mat-raised-button  color="primary" class="contentBtn" (click)="onItemSelector()">DODAJTE KOVANICU</button>
     <button mat-raised-button color="primary" class="contentBtn" (click)="reset()">RESET</button>
     <p>{{showChange}}</p>
     <p>{{inStockCoins}}</p>
