--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,3 +13,9 @@
 .addBtn{
     width: 50%;
 }
+@media (max-width: 600px) {
+    .machineContent{
+        width: 100%;
+        padding:0;
+    }
+  }
