--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-card class="machineContent">
     <mat-form-field class="addBtn">
-        <input matInput class="paymantBtn" type="number" placeholder="Unesesite iznos placanja"
+        <input matInput class="paymantBtn" type="number" placeholder="Unesite iznos placanja"
             [(ngModel)]="paymantAmount" min="0.1">
     </mat-form-field>
     <mat-form-field class="addBtn">
